Fix color contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,6 @@
   font-family: 'Otomanopee One', sans-serif;
 }
 
-.grey {
-  color: grey;
-}
 
 .flex {
   display: flex;
